View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0030982 | Open CASCADE | OCCT:Visualization | public | 2019-09-19 11:10 | 2020-12-02 17:12 |
Reporter | kgv | Assigned To | bugmaster | ||
Priority | normal | Severity | integration request | ||
Status | closed | Resolution | fixed | ||
Target Version | 7.5.0 | Fixed in Version | 7.5.0 | ||
Summary | 0030982: Visualization, OpenGl_View::MinMaxValues() - do not add background quad into depth range | ||||
Description | OpenGl_View::MinMaxValues() adds background quad into MinMax values. However, it does not make sense, since background is always drawn without depth test enabled. Bnd_Box OpenGl_View::MinMaxValues (const Standard_Boolean theToIncludeAuxiliary) const { if (!IsDefined()) { return Bnd_Box(); } Bnd_Box aBox = base_type::MinMaxValues (theToIncludeAuxiliary); // add bounding box of gradient/texture background for proper Z-fit if (theToIncludeAuxiliary && (myBackgrounds[Graphic3d_TOB_TEXTURE]->IsDefined() || myBackgrounds[Graphic3d_TOB_GRADIENT]->IsDefined())) { const Handle(Graphic3d_Camera)& aCamera = Camera(); Graphic3d_Vec2i aWinSize; Window()->Size (aWinSize.x(), aWinSize.y()); | ||||
Steps To Reproduce | Test case v3d/glsl/tiles shows an issue within tiled dump (gradient background is broken). | ||||
Tags | No tags attached. | ||||
Test case number | Not required | ||||
related to | 0022582 | closed | bugmaster | Visualization - provide an API for dumping a sub-region of the viewport |
related to | 0031129 | new | kgv | Visualization - revise background / environment API |
related to | 0027925 | closed | bugmaster | Visualization - implement order-independent transparency algorithm within rasterization rendering |
|
tiles_409x409_rttile128_KO.png (18,147 bytes) |
|
Branch CR30982 has been created by mzernova. SHA-1: 8506fe074d1b2600dc87ac3bd3bb9cf367b2ab82 Detailed log of new commits: Author: mzernova Date: Wed Nov 27 10:14:30 2019 +0300 0030982: Visualization, OpenGl_View::MinMaxValues() - do not add background quad into depth range Deleted adding background quad into depth range. Background is drawn in 2D coordinates. Fixed problem with using gradient background in tiles. |
|
+ Graphic3d_Vec2i aTileOffset; + Graphic3d_Vec2i aTileSize; Tip: Graphic3d_Vec2i aTileOffset, aTileSize; aWorldView.SetDiagonal (OpenGl_Vec4 (2.f / aTileSize.x(), 2.f / aTileSize.y(), 1.f, 1.f)); Please prefer floating point "2.0f" with zeros in OCCT. |
|
Branch CR30982 has been updated by mzernova. SHA-1: 4cc5450925d4b1a277c74d52689e4d21fc19d767 Detailed log of new commits: Author: mzernova Date: Wed Nov 27 15:28:26 2019 +0300 remarks from kgv |
|
Branch CR30982_1 has been created by mzernova. SHA-1: 0e602d2c4977d02d3ac7886407355ff80914696f Detailed log of new commits: Author: mzernova Date: Wed Nov 27 10:14:30 2019 +0300 0030982: Visualization, OpenGl_View::MinMaxValues() - do not add background quad into depth range Deleted adding background quad into depth range. Background is drawn in 2D coordinates. Fixed problem with using gradient background in tiles. |
|
The patch CR30982 is ready to review |
|
http://vm-jenkins-test-12.nnov.opencascade.com:8080/view/CR30982_1-master-mzernova |
|
The patch was reviewed |
|
Combination - OCCT branch : IR-2019-11-29 master SHA - 72f6dc612c43748a2c8862fe64c845d72be684d9 5f5b1aed1c6e139bbd34314eca77ae7abcd8895c Products branch : IR-2019-11-29 SHA - aff67a24109b329e80e8ffbd905de67b6637cbae was compiled on Linux, MacOS and Windows platforms and tested in optimize mode. Number of compiler warnings: No new/fixed warnings Regressions/Differences/Improvements: No regressions/differences CPU differences: Debian80-64: OCCT Total CPU difference: 16902.370000000145 / 16848.370000000145 [+0.32%] Products Total CPU difference: 10823.520000000082 / 10787.150000000072 [+0.34%] Windows-64-VC14: OCCT Total CPU difference: 18406.375 / 18305.59375 [+0.55%] Products Total CPU difference: 1321.28125 / 1322.4375 [-0.09%] Image differences : No differences that require special attention Memory differences : No differences that require special attention |
|
Branch CR30982_1 has been deleted by inv. SHA-1: 0e602d2c4977d02d3ac7886407355ff80914696f |
|
Branch CR30982 has been deleted by inv. SHA-1: 4cc5450925d4b1a277c74d52689e4d21fc19d767 |
occt: master f051908e 2019-11-27 07:14:30 Committer: bugmaster Details Diff |
0030982: Visualization, OpenGl_View::MinMaxValues() - do not add background quad into depth range Deleted adding background quad into depth range. Background is drawn in 2D coordinates. Fixed problem with using gradient background in tiles. |
Affected Issues 0030982 |
|
mod - src/OpenGl/OpenGl_BackgroundArray.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_View.cxx | Diff File | ||
mod - src/OpenGl/OpenGl_View_Raytrace.cxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2019-09-19 11:10 | kgv | New Issue | |
2019-09-19 11:10 | kgv | Assigned To | => kgv |
2019-11-18 17:12 | kgv | Assigned To | kgv => mzernova |
2019-11-18 17:12 | kgv | Status | new => assigned |
2019-11-20 12:10 | kgv | Description Updated | |
2019-11-22 15:50 | kgv | Relationship added | related to 0022582 |
2019-11-22 15:50 | kgv | Relationship added | related to 0031129 |
2019-11-22 15:51 | kgv | File Added: tiles_409x409_rttile128_KO.png | |
2019-11-22 15:52 | kgv | Steps to Reproduce Updated | |
2019-11-27 10:58 | git | Note Added: 0089214 | |
2019-11-27 13:27 | kgv | Note Added: 0089215 | |
2019-11-27 15:41 | git | Note Added: 0089218 | |
2019-11-27 15:42 | git | Note Added: 0089219 | |
2019-11-27 15:47 | mzernova | Note Added: 0089220 | |
2019-11-27 15:47 | mzernova | Assigned To | mzernova => osa |
2019-11-27 15:47 | mzernova | Status | assigned => resolved |
2019-11-29 10:12 | mzernova | Note Added: 0089273 | |
2019-11-29 18:20 | osa | Note Added: 0089292 | |
2019-11-29 18:20 | osa | Assigned To | osa => bugmaster |
2019-11-29 18:20 | osa | Status | resolved => reviewed |
2019-12-01 12:19 | bugmaster | Note Added: 0089309 | |
2019-12-01 12:19 | bugmaster | Status | reviewed => tested |
2019-12-01 12:20 | bugmaster | Test case number | => Not required |
2019-12-01 12:22 | bugmaster | Changeset attached | => occt master f051908e |
2019-12-01 12:22 | bugmaster | Status | tested => verified |
2019-12-01 12:22 | bugmaster | Resolution | open => fixed |
2019-12-01 12:49 | git | Note Added: 0089323 | |
2019-12-01 12:49 | git | Note Added: 0089324 | |
2019-12-17 15:01 | kgv | Relationship added | related to 0027925 |
2020-12-02 16:40 | emo | Fixed in Version | => 7.5.0 |
2020-12-02 17:12 | emo | Status | verified => closed |