0030982: Visualization, OpenGl_View::MinMaxValues() - do not add background quad into depth range

Deleted adding background quad into depth range. Background is drawn in 2D coordinates. Fixed problem with using gradient background in tiles.