src/OpenGl/OpenGl_View.cxx
@@ -686,36 +686,6 @@ Bnd_Box OpenGl_View::MinMaxValues (const Standard_Boolean theToIncludeAuxiliary)
 
   Bnd_Box aBox = base_type::MinMaxValues (theToIncludeAuxiliary);
 
-  // add bounding box of gradient/texture background for proper Z-fit
-  if (theToIncludeAuxiliary
-    && (myBackgrounds[Graphic3d_TOB_TEXTURE]->IsDefined()
-     || myBackgrounds[Graphic3d_TOB_GRADIENT]->IsDefined()))
-  {
-    const Handle(Graphic3d_Camera)& aCamera = Camera();
-    Graphic3d_Vec2i aWinSize;
-    Window()->Size (aWinSize.x(), aWinSize.y());
-
-    // Background is drawn using 2D transformation persistence
-    // (e.g. it is actually placed in 3D coordinates within active camera position).
-    // We add here full-screen plane with 2D transformation persistence
-    // for simplicity (myBgTextureArray might define a little bit different options
-    // but it is updated within ::Render())
-    const Graphic3d_Mat4d& aProjectionMat = aCamera->ProjectionMatrix();
-    const Graphic3d_Mat4d& aWorldViewMat  = aCamera->OrientationMatrix();
-    Graphic3d_BndBox3d aBox2d (Graphic3d_Vec3d (0.0, 0.0, 0.0),
-                               Graphic3d_Vec3d (double(aWinSize.x()), double(aWinSize.y()), 0.0));
-
-    Graphic3d_TransformPers aTrsfPers (Graphic3d_TMF_2d, Aspect_TOTP_LEFT_LOWER);
-    aTrsfPers.Apply (aCamera,
-                     aProjectionMat,
-                     aWorldViewMat,
-                     aWinSize.x(),
-                     aWinSize.y(),
-                     aBox2d);
-    aBox.Add (gp_Pnt (aBox2d.CornerMin().x(), aBox2d.CornerMin().y(), aBox2d.CornerMin().z()));
-    aBox.Add (gp_Pnt (aBox2d.CornerMax().x(), aBox2d.CornerMax().y(), aBox2d.CornerMax().z()));
-  }
-
   return aBox;
 }
 
